--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "framer-motion": "^10.16.4",
         "swiper": "^10.2.0",
         "three": "^0.156.0"
     }
